--- a/client/nav.jade
+++ b/client/nav.jade
@@ -9,7 +9,8 @@ template(name='nav')
                     i.big.loading.yin.yang.icon
             else
                 a.icon.item(href='/home' class="{{isActivePath '/home'}}")
-                    i.th.large.icon
+                    +i name='circled-menu'
+                    //- i.th.large.icon
                 if is_staff
                     a.icon.item(href='/buildings' class="{{isActivePath '/buildings'}}")
                         //- i.building.large.icon
@@ -20,10 +21,10 @@ template(name='nav')
                         //- i.shield.large.icon
                         +i name='user-shield'
                         .mobile.hidden &nbsp; staff
-                    a.icon.item(href='/users' class="{{isActivePath '/users'}}")
+                    a.icon.item(href='/residents' class="{{isActivePath '/residents'}}")
                         //- i.users.large.icon
                         +i name='groups'
-                        .mobile.hidden &nbsp; users
+                        .mobile.hidden &nbsp; residents
                 if is_manager
                     a.icon.item(href='/manager' class="{{isActivePath '/manager'}}")
                         //- i.shield.large.icon
@@ -34,12 +35,19 @@ template(name='nav')
                         //- i.clinic.medical.large.icon
                         +i name='treadmill'
                         .mobile.hidden &nbsp; kiosk
+                if is_user
+                    a.icon.item(href='/users' class="{{isActivePath '/users'}}")
+                        //- i.users.large.icon
+                        +i name='groups'
+                        .mobile.hidden &nbsp; users
+
             .right.menu
                 if currentUser
                     unless logging_out
                         //- if is_dev
                         a.item.set_model(href='/m/model' class="{{isActivePath '/m/model'}}")
-                            i.sitemap.large.icon
+                            //- i.sitemap.large.icon
+                            +i name='active-directory'
                         unless is_frontdesk
                             a.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='user_chat'}}")
                                 if currentUser.image_id
@@ -55,7 +63,8 @@ template(name='nav')
                     //-         i.sign.out.large.icon
                 else
                     a.item(href='/login' title='login') 
-                        i.sign.in.large.icon
+                        //- i.sign.in.large.icon
+                        +i name='internal'
                         |login
 
 
