--- a/client/styles.css
+++ b/client/styles.css
@@ -1,9 +1,9 @@
 body {
-    /* font-family: 'Ubuntu', sans-serif !important; */
+    font-family: 'Ubuntu', sans-serif !important;
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
-    background: rgba(0, 0, 0, .05) !important
+    background: rgba(0, 0, 0, .01) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -15,6 +15,11 @@ body {
     font-family: 'Abril Fatface', serif !important;
     font-size: 130% !important;
 } */
+
+
+.row>.column {
+    padding-bottom: 1rem !important;
+}
 
 
 .upload-btn-wrapper {
