--- a/client/users.jade
+++ b/client/users.jade
@@ -1,75 +1,30 @@
-//- template(name='people')
-//-     .ui.padded.stackable.grid.pad-left
-//-         .centered.row
-//-             .six.wide.column.scrolling
-//-                 .ui.basic.segment
-//-                     if selected_tags
-//-                         #clear_tags.ui.red.icon.button
-//-                             i.remove.icon
-//-                     each selected_tags
-//-                         .unselect_tag.ui.red.button
-//-                             b #{this}
-//-                     each global_tags
-//-                         .select_tag.ui.compact.large.button
-//-                             | #{this.name}
-//-                             // small #{this.count}
-//- 
-//-             .ten.wide.column.scrolling
-//-                 each people
-//-                     +user_item
-                        
-                        
-template(name='user_item')                            
-    .ui.stackable.grid.segment
-        a.four.wide.column(href="/user/#{_id}/view") 
-            if kiosk_photo
-                img.ui.image(src="{{c.url kiosk_photo width=200 height=150 crop='fit'}}")
-            else if image_id
-                img.ui.image(src="{{c.url image_id width=200 height=150 crop='fit'}}")
-        .twelve.wide.column
-            a.ui.header(href="/user/#{username}") 
-                |#{profile.name}
-            a.ui.small.header(href="/user/#{username}") 
-                |#{username}
-            .meta
-                each tags
-                    .ui.basic.label #{this}
-                i.user.shield.icon
-                |Roles 
-                each roles
-                    .ui.basic.label #{this}
-                i.message.icon
-                |Emails
-                if emails
-                    each emails
-                        .ui.basic.label #{address}
-            .ui.hidden.divider
-            // if currentUser
-            //     +toggle_friend
-            //- +user_connect_button        
-            a.ui.circular.button(href="/user/#{username}")
-                |View #{username}
-                i.right.chevron.icon
-            
-            
-            
-            
+template(name='residents') 
+    .ui.padded.grid
+        .row
+            .sixteen.wide.column
+                .ui.left.icon.huge.fluid.input
+                    i.search.icon
+                    input.username_search(type='text' placeholder='lookup resident...')
+                .ui.centered.four.stackable.cards
+                    each residents
+                        +resident
+                
 template(name='users') 
     .ui.padded.grid
         .row
             .sixteen.wide.column
-                h1.ui.center.aligned.grey.header 
-                    +i name='groups'
-                    //- i.users.icon
-                    |users
+                //- .ui.center.aligned.header 
+                //-     +i name='groups'
+                //-     //- i.users.icon
+                //-     |users
                 .ui.left.icon.huge.fluid.input
                     i.search.icon
-                    input.username_search(type='text' placeholder='lookup name...')
+                    input.username_search(type='text' placeholder='lookup user...')
                 .ui.centered.four.stackable.cards
                     each users
                         +user
                 
-template(name='user')                
+template(name='resident')                
     .ui.card
         .image
             //- a(href="/user/#{username}/")
@@ -81,10 +36,7 @@ template(name='user')
         .content
             a(href="/user/#{username}/")
                 h2.ui.center.aligned.header #{first_name} #{last_name} 
-                .ui.small.grey.header @#{username}
-            each five_tags
-                .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
-                    strong #{this}
+                .ui.small.header @#{username}
             +text_view key='first_name' label='First Name'
             +text_view key='last_name' label='Last Name'
             +text_view key='address' label='Address'
@@ -97,3 +49,21 @@ template(name='user')
             +user_check_steps            
 
             
+template(name='user')                
+    .ui.card
+        .image
+            //- a(href="/user/#{username}/")
+            //- img(src="{{c.url image_id height=400 width=400 background='white' crop='pad'}}")
+            if kiosk_photo
+                img.ui.image(src="{{c.url kiosk_photo width=400 height=400 crop='fit'}}")
+            else if image_id
+                img.ui.image(src="{{c.url image_id width=400 height=400 crop='fit'}}")
+        .content
+            a(href="/user/#{username}/")
+                h2.ui.center.aligned.header #{first_name} #{last_name} 
+                .ui.small.header @#{username}
+            each five_tags
+                .ui.compact.small.circular.basic.button.person_tag(class=tag_class) 
+                    strong #{this}
+            +text_view key='first_name' label='First Name'
+            +text_view key='last_name' label='Last Name'
