--- a/components/maintenance/manager.jade
+++ b/components/maintenance/manager.jade
@@ -3,19 +3,36 @@ template(name='manager')
         .row
             .four.wide.column
                 .ui.header 
-                    +i name='manager'
-                    |manager dashboard
-            .twelve.wide.column
-                .ui.segment
-                    .ui.header staff shift walks
-                    .ui.large.list
-                        each shift_walks
-                            .item #{_author_username} #{when}
-                .ui.segment
-                    .ui.header check in history
-                    .ui.large.list
-                        each check_ins
-                            .item
-                                |#{resident_username} #{when}, {{long_date _timestamp}}
-                                if garden_key 
-                                    .ui.basic.green.label garden key
+                    +i name='key'
+                    |key checkouts
+                .ui.large.list
+                    each key_checkouts
+                        .item
+                            .ui.basic.label 
+                                |#{owner_user_id.first_name}
+                                |#{owner_user_id.last_name}
+                            |by
+                            |#{_author_username} #{when}
+            .four.wide.column
+                .ui.header 
+                    +i name='walking'
+                    |staff shift walks
+                .ui.large.list
+                    each shift_walks
+                        .item #{_author_username} #{when}
+            .eight.wide.column
+                .ui.header 
+                    +i name='internal'
+                    |check in history
+                .ui.large.list
+                    each check_ins
+                        +checkin_list_item
+                        
+                        
+template(name='checkin_list_item')                        
+    .item
+        with resident
+            +user_info
+        | #{when}, {{long_date _timestamp}}
+        if garden_key 
+            .ui.basic.green.label garden key
