--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -5,7 +5,7 @@ template(name='staff')
                 .ui.grey.large.header 
                     //- i.user.shield.icon
                     +i name='user-shield'
-                    |Staff
+                    |staff
                 //- i.massive.loading.brown.poo.icon
                 a.ui.large.fluid.basic.button(href='/add_resident')
                     //- i.user.add.large.icon
@@ -17,6 +17,7 @@ template(name='staff')
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
                 .ui.large.fluid.button.log_staff_walked
+                    +i name='walking' classes='ui inline image'                
                     |log hourly shift walk
                 //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
                 //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
@@ -24,14 +25,18 @@ template(name='staff')
                 .ui.header your shift walks
                 each shift_walks
                     .ui.small.header #{when}
-                        i.remove.link.icon.remove_walk
-                a.ui.fluid.large.button(href='/shift_checklist')
-                    i.tasks.icon
-                    |checklist
+                        i.remove.link.icon.remove_walk(title='remove walk entry')
+                if checklist_completed
+                    i.big.green.checkmark.icon
+                    |checklist completed
+                else 
+                    a.ui.fluid.big.button(href='/shift_checklist')
+                        i.tasks.icon
+                        |checklist not completed
             .twelve.wide.column
                 .ui.styled.fluid.large.accordion
                     .active.title
-                        i.users.icon
+                        +i name='groups' classes='ui inline image'
                         |checked in members
                         i.dropdown.icon
                     .active.content
@@ -39,13 +44,13 @@ template(name='staff')
                             each sessions
                                 +hc_session
                     .title 
-                        i.tablet.icon
+                        +i name='android-tablet' classes='ui inline image'
                         |kiosk management
                         i.dropdown.icon
                     .content
                         +kiosk_settings
                     .title 
-                        i.calendar.icon
+                        +i name='calendar' classes='ui inline image'
                         |staff schedule
                         i.dropdown.icon
                     .content
@@ -74,16 +79,14 @@ template(name='hc_session')
             with session_resident
                 if address
                     div
-                    //- +i name='marker' classes='ui avatar image'
-                    i.location.icon
+                    +i name='marker' classes='ui avatar image'
                     |#{address}
-                .ui.horizontal.list
-                    .item
-                        i.building.icon
-                        |#{building_number}
-                    .item
-                        i.home.icon
-                        | #{unit_number}
+                div
+                    +i name='building' classes='ui avatar image'
+                    |#{building_number}
+                div
+                    +i name='home' classes='ui avatar image'
+                    | #{unit_number}
                 //- +number_edit key='checkins_without_gov_id' label='alter checkins without gov id' direct=true
                 //- +number_edit key='checkins_without_email_verification' label='alter checkins without email verification' direct=true
                 //- +number_view key='unit_number' label='unit #' direct=true
@@ -92,7 +95,7 @@ template(name='hc_session')
                 //- +rules_and_regs_check
                 +user_check_steps 
                 if active_violations
-                    .ui.big.red.label Active Violation(s)
+                    .ui.big.red.label active violations
                 if staff_notes
                     .ui.small.grey.header
                         i.clipboard.icon(title='staff notes')
@@ -111,7 +114,7 @@ template(name='hc_session')
                     +i name='plant' classes='ui mini inline image'
                     strong garden key
                 .ui.fluid.large.button.check_in_garden_key
-                    i.sign.in.icon
+                    +i name='internal' classes='ui mini inline image'
                     |check in garden key
             else
                 .ui.compact.fluid.button.garden_key_checkout
@@ -119,8 +122,8 @@ template(name='hc_session')
                     strong garden key
                     
                 .ui.fluid.button.sign_out
-                    i.sign.out.icon
-                    |check out
+                    +i name='exit' classes='ui mini inline image'
+                    |hc check out
             //- +boolean_edit key='active' direct=true
             //- +boolean_edit key='submitted' direct=true
             //- +boolean_edit key='approved' direct=true
@@ -375,7 +378,7 @@ template(name='shift_checklist')
                         each checklist_items
                             .ui.segment.stackable.grid
                                 .eight.wide.column
-                                    |#{title}
+                                    .ui.header #{title}
                                 .eight.wide.column
                                     unless completed
                                         .ui.big.fluid.button.complete mark complete
@@ -386,9 +389,10 @@ template(name='shift_checklist')
                                             .hidden.content
                                                 |mark incomplete
                                         .ui.tiny.header {{long_date completed_time}}
-                        .ui.fluid.large.button.submit
-                            i.checkmark.icon
-                            |submit
+                        if all_completed
+                            .ui.fluid.big.button.submit_checklist
+                                i.checkmark.icon
+                                |submit
                 else
                     .ui.large.button.create_checklist
                         |create checklist
