--- a/client/fields.jade
+++ b/client/fields.jade
@@ -208,7 +208,7 @@ template(name='image_edit')
             else
                 if is_frontdesk
                     .upload-btn-wrapper            
-                        .btn + Add Photo (switch camera to front)
+                        .btn Take Photo (switch camera to front)
                         input(type='file' name='upload_image' accept='image/*' capture='user')
                 else            
                     input(type='file' name='upload_image' accept='image/*' capture='user')
